--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
-<b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
-<b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
-<b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
-
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
@@ -120,6 +117,7 @@ b {padding-left:2em; }
 <b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
 
 <div class="category" id="data"><h3>數據分析 Data</h3></div>
+<b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
 <b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
 
