--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628"> 《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
-<b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
@@ -78,6 +78,7 @@ b {padding-left:2em; }
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
 <div class="category" id="books"><h3>書 Books</h3></div>
+<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628"> 《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
 <b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
