--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
-<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628"> 《東京，若即若離》徘徊過多少櫥窗</a><br>
-<b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
+<b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
+<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
+<b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540">Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 
@@ -47,7 +48,7 @@ b {padding-left:2em; }
 
 <h3>如果你不知道要看哪篇 Random Articles</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
-<b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a></b><br>
+<b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6">在家工作雜談與 2021的暴雪</a></b><br>
 <b>[廢文] <a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a></b><br>
 <b>[書] <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a></b><br>
 <b>[電影] <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a></b><br>
@@ -68,24 +69,24 @@ b {padding-left:2em; }
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
 <b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
 <b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
-<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
-<b>Oct 23, 2020</b><a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad"> 安穩平順是誰人生</a><br>
-<b>Sept 18, 2020</b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a><br>
-<b>Aug 23, 2020</b><a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8"> 蘇黎世街頭兩張海報背後的秘密</a><br>
-<b>Jul 12, 2020</b><a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E8%B6%85%E5%B8%82%E8%A3%A1%E7%9A%84%E6%B0%B8%E7%BA%8C%E8%88%87%E7%92%B0%E4%BF%9D-58a621896fc8"> 瑞士超市裡的永續與環保</a><br>
+<b>Jan 31, 2021</b> <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
+<b>Oct 23, 2020</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad">安穩平順是誰人生</a><br>
+<b>Sept 18, 2020</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593">我與台灣不相見已二年餘了</a><br>
+<b>Aug 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8">蘇黎世街頭兩張海報背後的秘密</a><br>
+<b>Jul 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E8%B6%85%E5%B8%82%E8%A3%A1%E7%9A%84%E6%B0%B8%E7%BA%8C%E8%88%87%E7%92%B0%E4%BF%9D-58a621896fc8">瑞士超市裡的永續與環保</a><br>
 <b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品</a><br>
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
 <div class="category" id="books"><h3>書 Books</h3></div>
-<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628"> 《東京，若即若離》徘徊過多少櫥窗</a><br>
+<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
 <b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
 <b>Apr 30, 2021</b> <a href="https://chichinghsu.medium.com/%E5%8E%9F%E5%AD%90%E7%BF%92%E6%85%A3-%E6%88%91%E5%B0%B1%E7%88%9B%E9%82%84%E6%98%AF%E6%88%91%E5%B0%B1%E6%87%B6-216232ebe3c7">《原子習慣》我就爛還是我就懶？</a><br>
-<b>Feb 22, 2021</b><a href="https://chichinghsu.medium.com/%E4%B8%AD%E6%9D%B1%E5%BF%83%E8%87%9F-%E4%BD%A0%E6%9C%89%E6%89%80%E4%B8%8D%E7%9F%A5%E7%9A%84%E6%B2%99%E7%83%8F%E5%9C%B0%E9%98%BF%E6%8B%89%E4%BC%AF-167add66345f"> 《中東心臟》你有所不知的沙烏地阿拉伯</a><br>
-<b>Feb 13, 2021</b><a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3"> 《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
-<b>Jan 03, 2021</b><a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
+<b>Feb 22, 2021</b> <a href="https://chichinghsu.medium.com/%E4%B8%AD%E6%9D%B1%E5%BF%83%E8%87%9F-%E4%BD%A0%E6%9C%89%E6%89%80%E4%B8%8D%E7%9F%A5%E7%9A%84%E6%B2%99%E7%83%8F%E5%9C%B0%E9%98%BF%E6%8B%89%E4%BC%AF-167add66345f"> 《中東心臟》你有所不知的沙烏地阿拉伯</a><br>
+<b>Feb 13, 2021</b> <a href="https://chichinghsu.medium.com/%E6%B7%B1%E5%BA%A6%E6%80%9D%E8%80%83-%E8%A5%BF%E6%B4%8B%E6%A3%8B%E7%89%B9%E7%B4%9A%E5%A4%A7%E5%B8%AB%E8%88%87%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E7%9A%84%E6%81%A9%E6%80%A8%E6%83%85%E4%BB%87%E5%8F%B2-385faef914c3">《深度思考》西洋棋特級大師與人工智慧的恩怨情仇史</a><br>
+<b>Jan 03, 2021</b> <a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
 <b>Dec 7, 2020</b> <a href="https://chichinghsu.medium.com/%E5%B0%BC%E7%BE%85%E6%B2%B3%E8%AC%80%E6%AE%BA%E6%A1%88-%E5%8F%8A%E8%98%87%E4%B8%B9%E8%88%87%E5%8D%97%E8%98%87%E4%B8%B9%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F-bce2b522d29b">《尼羅河謀殺案》及蘇丹與南蘇丹的前世今生</a><br>
 <b>Oct 2, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%AA%B0%E6%98%AF%E7%95%B0%E9%84%89%E4%BA%BA-%E8%AE%80%E5%8D%A1%E8%AC%AC-%E7%95%B0%E9%84%89%E4%BA%BA-5c8d3373d59d">誰是異鄉人？讀卡謬《異鄉人》</a><br>
 <b>Jun 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%B8%96%E7%95%8C%E6%9C%AB%E6%97%A5%E8%88%87%E5%86%B7%E9%85%B7%E7%95%B0%E5%A2%83-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E7%9A%84%E5%AD%A4%E5%96%AE%E5%8C%97%E5%8D%8A%E7%90%83-99376fecef94">《世界末日與冷酷異境》村上春樹的孤單北半球</a><br>
@@ -94,6 +95,7 @@ b {padding-left:2em; }
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
 <div class="category" id="travel"><h3>遊記 Travel</h3></div>
+<b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
 <b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
 <b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
 <b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
@@ -119,7 +121,7 @@ b {padding-left:2em; }
 
 <div class="category" id="data"><h3>數據分析 Data</h3></div>
 <b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
-<b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
+<b>Dec 24, 2020</b> <a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d">台灣 Podcast 2020年 12月排名觀察報告</a><br>
 <b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
 
 <div class="category" id="movies"><h3>電影與影集 Movies and Series</h3></div>
