--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
-<b>Apr 18, 2022</b> <a hre="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
+<b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
+<b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 <b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
-<b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
-<b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540">Wordle 英文版跟注音版之你不知道的事</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
@@ -64,7 +63,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
-<b>Apr 18, 2022</b> <a hre="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
+<b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 <b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
 <b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
@@ -129,5 +128,6 @@ b {padding-left:2em; }
 <b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
 
 <div class="category" id="architecture"><h3>建築 Architecture</h3></div>
+<b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
 <b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
 </body></html> 
