--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
 <b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
 <b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 <b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
@@ -88,12 +89,13 @@ b {padding-left:2em; }
 <b>Jan 03, 2021</b> <a href="https://chichinghsu.medium.com/%E6%96%B0%E5%B9%B4%E9%9A%A8%E7%AD%86%E4%B9%8B%E8%AE%80-%E5%8D%8A%E7%94%9F%E7%B7%A3-%E6%88%91%E6%93%81%E6%9C%89%E7%9A%84%E9%83%BD%E6%98%AF%E5%83%A5%E5%80%96-424d710198fe"> 新年隨筆之讀《半生緣》我擁有的都是僥倖</a><br>
 <b>Dec 7, 2020</b> <a href="https://chichinghsu.medium.com/%E5%B0%BC%E7%BE%85%E6%B2%B3%E8%AC%80%E6%AE%BA%E6%A1%88-%E5%8F%8A%E8%98%87%E4%B8%B9%E8%88%87%E5%8D%97%E8%98%87%E4%B8%B9%E7%9A%84%E5%89%8D%E4%B8%96%E4%BB%8A%E7%94%9F-bce2b522d29b">《尼羅河謀殺案》及蘇丹與南蘇丹的前世今生</a><br>
 <b>Oct 2, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%AA%B0%E6%98%AF%E7%95%B0%E9%84%89%E4%BA%BA-%E8%AE%80%E5%8D%A1%E8%AC%AC-%E7%95%B0%E9%84%89%E4%BA%BA-5c8d3373d59d">誰是異鄉人？讀卡謬《異鄉人》</a><br>
-<b>Jun 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%B8%96%E7%95%8C%E6%9C%AB%E6%97%A5%E8%88%87%E5%86%B7%E9%85%B7%E7%95%B0%E5%A2%83-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E7%9A%84%E5%AD%A4%E5%96%AE%E5%8C%97%E5%8D%8A%E7%90%83-99376fecef94">《世界末日與冷酷異境》村上春樹的孤單北半球</a><br>
+<b>June 23, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%B8%96%E7%95%8C%E6%9C%AB%E6%97%A5%E8%88%87%E5%86%B7%E9%85%B7%E7%95%B0%E5%A2%83-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E7%9A%84%E5%AD%A4%E5%96%AE%E5%8C%97%E5%8D%8A%E7%90%83-99376fecef94">《世界末日與冷酷異境》村上春樹的孤單北半球</a><br>
 <b>May 17, 2020</b> <a href="https://medium.com/@chichinghsu/%E4%BD%A0%E8%AA%AA-%E5%AF%AE%E5%9C%8B%E5%88%B0%E5%BA%95%E6%9C%89%E4%BB%80%E9%BA%BC-%E6%9D%91%E4%B8%8A%E6%98%A5%E6%A8%B9%E4%B9%8B%E6%97%85%E8%A1%8C%E7%9A%84%E6%84%8F%E7%BE%A9-6e32aaee9cc1">《你說，寮國到底有什麼？》村上春樹之旅行的意義</a><br>
-<b>Jun 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
+<b>June 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
 <div class="category" id="travel"><h3>遊記 Travel</h3></div>
+<b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
 <b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
 <b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
 <b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
@@ -107,8 +109,8 @@ b {padding-left:2em; }
 <div class="category" id="others"><h3>其他 Others</h3></div>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
-<b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
-<b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
+<b>June 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
+<b>June 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
 <b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
 </a><br>
 <b>Mar 13, 2021</b> <a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144">各種解決問題的方法</a><br>
