--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊
+</a><br>
 <b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
 <b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
 <b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
-<b>Apr 3, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B4%9B%E6%A1%91-2022-%E5%B9%B4%E6%98%A5-15153af36076">瑞士洛桑 2022 年春</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
@@ -64,6 +65,8 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
+<b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊
+</a><br>
 <b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 <b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
