--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
 <b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
 <b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊</a><br>
 <b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
-<b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
-<b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
@@ -113,6 +112,7 @@ b {padding-left:2em; }
 
 
 <div class="category" id="others"><h3>其他 Others</h3></div>
+<b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
 <b>June 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
