--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
 <b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
 <b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
 <b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊</a><br>
-<b>June 19, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99-toledo-%E9%9B%9C%E8%A8%98-5b8fd67c1167">西班牙 Toledo 雜記</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
@@ -85,7 +85,7 @@ b {padding-left:2em; }
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
-<div class="category" id="eth_zuerich"><h3>碩士生活 ETH Zürich</h3></div>
+<div class="category" id="eth_zuerich"><h3>學校生活 ETH Zürich</h3></div>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
@@ -112,6 +112,7 @@ b {padding-left:2em; }
 
 
 <div class="category" id="others"><h3>其他 Others</h3></div>
+<b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
 <b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
